[gd_scene load_steps=5 format=3 uid="uid://ic320evkcsn3"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_ethl4"]
[ext_resource type="Texture2D" uid="uid://1cfb5fivpp5r" path="res://menuthing.png" id="1_fclc0"]
[ext_resource type="Texture2D" uid="uid://bn6ojpcyrlj75" path="res://menucolour.png" id="1_iqflg"]
[ext_resource type="Texture2D" uid="uid://bg638fw3k1484" path="res://icon.png" id="3_38wug"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ethl4")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(8.47725, 4.67341)
texture = ExtResource("1_iqflg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 99.0
offset_top = -15.0
offset_right = 227.0
offset_bottom = 113.0
scale = Vector2(1.58208, 1.26301)
texture = ExtResource("1_fclc0")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 20.8586
offset_top = 38.0046
offset_right = 161.859
offset_bottom = 61.0046
scale = Vector2(0.616459, 0.886982)
text = "Run Run Pagliacci!"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 71.0
offset_right = 96.0
offset_bottom = 172.0
scale = Vector2(0.802883, 0.820815)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Pag" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 154.0
offset_top = 87.0
offset_right = 194.0
offset_bottom = 127.0
scale = Vector2(2, 2)
texture = ExtResource("3_38wug")

[node name="Credits" type="Label" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 76.0
offset_right = 297.0
offset_bottom = 203.0
text = "Programming: K Smith
Art:                     K Smith
Music:                K Smith
Level Design:   K Smith

"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
